<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:stretchColumns="1,2,3,4"
    style="@style/BG">
    <TableRow android:layout_marginTop="40sp">
        <TextView android:id="@+id/textoResultado" android:text="@string/textoInicio" android:layout_span="4" style="@style/textoPrincipal"></TextView>
    </TableRow>
    <TableRow>
        <Button android:id="@+id/buttonClear" android:text="@string/buttonClear" style="@style/buttons"></Button>
        <Button android:id="@+id/buttonSigno" android:text="@string/buttonSigno" style="@style/buttons"></Button>
        <Button android:id="@+id/buttonPorcentaje" android:text="@string/buttonPorcentaje" style="@style/buttons"></Button>
        <Button android:id="@+id/buttonDivide" android:text="@string/buttonDivide" style="@style/buttonBG"></Button>
    </TableRow>
    <TableRow>
        <Button android:id="@+id/button7" android:text="@string/button7" style="@style/buttons"></Button>
        <Button android:id="@+id/button8" android:text="@string/button8" style="@style/buttons"></Button>
        <Button android:id="@+id/button9" android:text="@string/button9" style="@style/buttons"></Button>
        <Button android:id="@+id/buttonMultiplica" android:text="@string/buttonMultiplica" style="@style/buttonBG"></Button>
    </TableRow>
    <TableRow>
        <Button android:id="@+id/button4" android:text="@string/button4" style="@style/buttons"></Button>
        <Button android:id="@+id/button5" android:text="@string/button5" style="@style/buttons"></Button>
        <Button android:id="@+id/button6" android:text="@string/button6" style="@style/buttons"></Button>
        <Button android:id="@+id/buttonResta" android:text="@string/buttonResta" style="@style/buttonBG"></Button>
    </TableRow>
    <TableRow>
        <Button android:id="@+id/button1" android:text="@string/button1" style="@style/buttons"></Button>
        <Button android:id="@+id/button2" android:text="@string/button2" style="@style/buttons"></Button>
        <Button android:id="@+id/button3" android:text="@string/button3" style="@style/buttons"></Button>
        <Button android:id="@+id/buttonSuma" android:text="@string/buttonSuma" style="@style/buttonBG"></Button>
    </TableRow>
    <TableRow>
        <Button android:id="@+id/button0" android:layout_span="2" android:text="@string/button0" style="@style/buttons"></Button>
        <Button android:id="@+id/buttonComa" android:text="@string/buttonComa" style="@style/buttons"></Button>
        <Button android:id="@+id/buttonIgual" android:text="@string/buttonIgual" style="@style/buttonBG"></Button>
    </TableRow>
</TableLayout>